--- a/Release.toml
+++ b/Release.toml
@@ -48,3 +48,6 @@ version = "1.1.1"
     "migrate_v1.1.0_kubelet-kube-api-qps-kube-api-burst.lz4",
 ]
 "(1.1.0, 1.1.1)" = []
+"(1.1.1, 1.1.2)" = [
+    "migrate_v1.1.2_kubelet-container-log.lz4",
+]
