open-vm-tools: add recommended device filters
Adds the recommended device filters to VMTools config to prevent
interference from CNI network/device interfaces.

The list of filters is taken directly from cloud-provider-vsphere.

--- a/packages/open-vm-tools/tools.conf
+++ b/packages/open-vm-tools/tools.conf
@@ -3,3 +3,7 @@ poweron-script=/usr/bin/true
 poweroff-script=/usr/bin/true
 resume-script=/usr/bin/true
 suspend-script=/usr/bin/true
+
+[guestinfo]
+primary-nics=eth0
+exclude-nics=antrea-*,cali*,ovs-system,br*,flannel*,veth*,docker*,virbr*,vxlan_sys_*,genev_sys_*,gre_sys_*,stt_sys_*,????????-??????
