--- a/Release.toml
+++ b/Release.toml
@@ -51,4 +51,5 @@ version = "1.1.1"
 "(1.1.1, 1.1.2)" = [
     "migrate_v1.1.2_kubelet-container-log.lz4",
     "migrate_v1.1.2_kubelet-system-reserved.lz4",
+    "migrate_v1.1.2_admin-container-v0-7-1.lz4",
 ]
