--- a/variants/Cargo.toml
+++ b/variants/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "aws-k8s-1.18",
     "aws-k8s-1.19",
     "aws-k8s-1.20",
+    "aws-k8s-1.21",
     "vmware-dev",
     "vmware-k8s-1.20",
 ]
