--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -34,6 +34,7 @@ members = [
     "api/migration/migrations/v1.1.2/kubelet-container-log",
     "api/migration/migrations/v1.1.2/kubelet-system-reserved",
     "api/migration/migrations/v1.1.2/admin-container-v0-7-1",
+    "api/migration/migrations/v1.1.2/control-container-v0-5-1",
 
     "bottlerocket-release",
 
