--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,9 @@ jobs:
           - variant: vmware-k8s-1.20
             arch: x86_64
             supported: true
+          - variant: vmware-k8s-1.21
+            arch: x86_64
+            supported: true
       fail-fast: false
     steps:
       - uses: actions/checkout@v2
