--- a/packages/release/release-sysctl.conf
+++ b/packages/release/release-sysctl.conf
@@ -35,6 +35,10 @@ net.ipv4.ip_local_port_range = 32768 60999
 net.netfilter.nf_conntrack_max = 1048576
 net.netfilter.nf_conntrack_generic_timeout = 120
 
+# Enable loose mode for reverse path filter
+net.ipv4.conf.eth0.rp_filter = 2
+net.ipv4.conf.lo.rp_filter = 2
+
 ## Kernel hardening settings
 ## Settings & descriptions sourced from the KSPP wiki, see
 ## https://kernsec.org/wiki/index.php/Kernel_Self_Protection_Project/Recommended_Settings#sysctls
