--- a/Release.toml
+++ b/Release.toml
@@ -54,3 +54,6 @@ version = "1.1.2"
     "migrate_v1.1.2_admin-container-v0-7-1.lz4",
     "migrate_v1.1.2_control-container-v0-5-1.lz4",
 ]
+"(1.1.2, 1.1.3)" = [
+    "migrate_v1.1.3_kubelet-cpu-manager-state.lz4",
+]
