--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -35,6 +35,7 @@ members = [
     "api/migration/migrations/v1.1.2/kubelet-system-reserved",
     "api/migration/migrations/v1.1.2/admin-container-v0-7-1",
     "api/migration/migrations/v1.1.2/control-container-v0-5-1",
+    "api/migration/migrations/v1.1.3/kubelet-cpu-manager-state",
 
     "bottlerocket-release",
 
