netdog: Switch to argh for argument parsing
This removes the custom argument parsing logic in favor of using `argh`.
`argh` makes it simpler to add additional subcommands that may or may
not have their own arguments.

--- a/sources/api/netdog/Cargo.toml
+++ b/sources/api/netdog/Cargo.toml
@@ -9,6 +9,7 @@ publish = false
 exclude = ["README.md"]
 
 [dependencies]
+argh = "0.1.4"
 dns-lookup = "1.0"
 ipnet = { version = "2.0", features = ["serde"] }
 envy = "0.4"
