Add migrations for `settings.network.hostname`
This adds the migrations needed for `settings.network.hostname`, one for
the setting, its service and configuration file, and one for the setting
generator metadata.

--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -37,6 +37,8 @@ members = [
     "api/migration/migrations/v1.1.2/control-container-v0-5-1",
     "api/migration/migrations/v1.1.3/kubelet-cpu-manager-state",
     "api/migration/migrations/v1.1.3/kubelet-cpu-manager",
+    "api/migration/migrations/v1.1.5/hostname-setting",
+    "api/migration/migrations/v1.1.5/hostname-setting-metadata",
 
     "bottlerocket-release",
 
