--- a/Release.toml
+++ b/Release.toml
@@ -59,3 +59,7 @@ version = "1.1.4"
     "migrate_v1.1.3_kubelet-cpu-manager.lz4",
 ]
 "(1.1.3, 1.1.4)" = []
+"(1.1.4, 1.1.5)" = [
+    "migrate_v1.1.5_hostname-setting.lz4",
+    "migrate_v1.1.5_hostname-setting-metadata.lz4",
+]
