--- a/Release.toml
+++ b/Release.toml
@@ -56,4 +56,5 @@ version = "1.1.2"
 ]
 "(1.1.2, 1.1.3)" = [
     "migrate_v1.1.3_kubelet-cpu-manager-state.lz4",
+    "migrate_v1.1.3_kubelet-cpu-manager.lz4",
 ]
