--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -36,6 +36,7 @@ members = [
     "api/migration/migrations/v1.1.2/admin-container-v0-7-1",
     "api/migration/migrations/v1.1.2/control-container-v0-5-1",
     "api/migration/migrations/v1.1.3/kubelet-cpu-manager-state",
+    "api/migration/migrations/v1.1.3/kubelet-cpu-manager",
 
     "bottlerocket-release",
 
