packages: fix permissions for /var/lib/systemd/random-seed
This commit changes the permissions on `/var/lib/systemd/random-seed`
from `755` to `600`, and SELinux label from `state_t` to `secret_t`, so
that only the root user can read from the file.

Signed-off-by: Arnaldo Garcia Rincon <agarrcia@amazon.com>

--- a/packages/systemd/var-run-tmpfiles.conf
+++ b/packages/systemd/var-run-tmpfiles.conf
@@ -2,3 +2,4 @@ d /run/cache 0755 root root -
 d /run/lock 0755 root root -
 L /var/lock - - - - /run/lock
 Z /var/lib/systemd 0755 root root -
+z /var/lib/systemd/random-seed 600 root root -
