--- a/Release.toml
+++ b/Release.toml
@@ -63,4 +63,5 @@ version = "1.1.4"
     "migrate_v1.2.0_hostname-setting.lz4",
     "migrate_v1.2.0_hostname-setting-metadata.lz4",
     "migrate_v1.2.0_add-custom-certificates.lz4",
+    "migrate_v1.2.0_kubelet-topology-manager.lz4",
 ]
