--- a/Makefile.toml
+++ b/Makefile.toml
@@ -263,7 +263,7 @@ ${BUILDSYS_TOOLS_DIR}/docker-go \
 ]
 
 [tasks.build-tools]
-dependencies = ["fetch"]
+dependencies = ["setup", "fetch-sources"]
 script = [
 '''
 cargo install \
@@ -327,7 +327,7 @@ fi
 
 # Builds a package including its build-time and runtime dependency packages.
 [tasks.build-package]
-dependencies = ["check-cargo-version", "build-tools", "publish-setup"]
+dependencies = ["check-cargo-version", "fetch-sdk", "build-tools", "publish-setup"]
 script_runner = "bash"
 script = [
 '''
@@ -353,7 +353,7 @@ cargo build \
 ]
 
 [tasks.build-variant]
-dependencies = ["build-tools", "publish-setup"]
+dependencies = ["fetch-sdk", "build-tools", "publish-setup"]
 script = [
 '''
 export PATH="${BUILDSYS_TOOLS_DIR}/bin:${PATH}"
