--- a/sources/api/apiclient/Cargo.toml
+++ b/sources/api/apiclient/Cargo.toml
@@ -25,7 +25,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 simplelog = "0.10"
 snafu = { version = "0.6", features = ["futures"] }
-tokio = { version = "1", default-features = false, features = ["fs", "io-std", "macros", "rt-multi-thread", "time"] }
+tokio = { version = "~1.8", default-features = false, features = ["fs", "io-std", "macros", "rt-multi-thread", "time"] }  # LTS
 toml = "0.5"
 unindent = "0.1"
 url = "2.2.1"
