--- a/sources/api/early-boot-config/Cargo.toml
+++ b/sources/api/early-boot-config/Cargo.toml
@@ -23,7 +23,7 @@ serde_plain = "0.3"
 serde-xml-rs = "0.4.1"
 simplelog = "0.10"
 snafu = "0.6"
-tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
+tokio = { version = "~1.8", default-features = false, features = ["macros", "rt-multi-thread"] }  # LTS
 toml = "0.5"
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
