--- a/sources/api/pluto/Cargo.toml
+++ b/sources/api/pluto/Cargo.toml
@@ -17,7 +17,7 @@ rusoto_core = { version = "0.46", default-features = false, features = ["rustls"
 rusoto_eks = { version = "0.46", default-features = false, features = ["rustls"] }
 serde_json = "1"
 snafu = "0.6"
-tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
+tokio = { version = "~1.8", default-features = false, features = ["macros", "rt-multi-thread"] }  # LTS
 
 [build-dependencies]
 cargo-readme = "3.1"
