--- a/sources/api/thar-be-settings/Cargo.toml
+++ b/sources/api/thar-be-settings/Cargo.toml
@@ -21,7 +21,7 @@ schnauzer = { path = "../schnauzer" }
 serde_json = "1"
 simplelog = "0.10"
 snafu = "0.6"
-tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
+tokio = { version = "~1.8", default-features = false, features = ["macros", "rt-multi-thread"] }  # LTS
 
 [build-dependencies]
 cargo-readme = "3.1"
