--- a/sources/imdsclient/Cargo.toml
+++ b/sources/imdsclient/Cargo.toml
@@ -15,7 +15,7 @@ log = "0.4"
 reqwest = { version = "0.11.1", default-features = false }
 serde_json = "1"
 snafu = "0.6"
-tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
+tokio = { version = "~1.8", default-features = false, features = ["macros", "rt-multi-thread", "time"] }  # LTS
 url = "2.1.1"
 
 [build-dependencies]
