--- a/packages/containerd/containerd.service
+++ b/packages/containerd/containerd.service
@@ -1,8 +1,8 @@
 [Unit]
 Description=containerd container runtime
 Documentation=https://containerd.io
-After=network-online.target configured.target runtime.slice
-Wants=network-online.target configured.target runtime.slice
+After=network-online.target configured.target
+Wants=network-online.target configured.target
 
 [Service]
 Slice=runtime.slice
