--- a/packages/grub/Cargo.toml
+++ b/packages/grub/Cargo.toml
@@ -9,8 +9,8 @@ build = "build.rs"
 path = "pkg.rs"
 
 [[package.metadata.build-package.external-files]]
-url = "https://ftp.gnu.org/gnu/grub/grub-2.04.tar.xz"
-sha512 = "9c15c42d0cf5d61446b752194e3b628bb04be0fe6ea0240ab62b3d753784712744846e1f7c3651d8e0968d22012e6d713c38c44936d4004ded3ca4d4007babbb"
+url = "https://cdn.amazonlinux.com/blobstore/a2f920abd554c7ab22af43c720198abcf5f78828c0543a0d7c65c654610eab26/grub2-2.06-2.amzn2.0.1.src.rpm"
+sha512 = "0a30a75426f9030b9bab489b824d4cc51c864f2fef87df298ca4a725ecfb49dbd310f276740fadab64879ee1dfc60b35f52957b7cfc5ff023d856b536b0af04d"
 
 [build-dependencies]
 glibc = { path = "../glibc" }
