--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -25,26 +25,7 @@ members = [
     "api/shibaken",
 
     # "api/migration/migrations/vX.Y.Z/...
-    "api/migration/migrations/v1.1.0/kubelet-server-tls-bootstrap",
-    "api/migration/migrations/v1.1.0/kubelet-cloud-provider",
-    "api/migration/migrations/v1.1.0/kubelet-registry-qps-registry-burst",
-    "api/migration/migrations/v1.1.0/shared-containerd-configs",
-    "api/migration/migrations/v1.1.0/kubelet-event-qps-event-burst",
-    "api/migration/migrations/v1.1.0/schnauzer-paws",
-    "api/migration/migrations/v1.1.0/kubelet-kube-api-qps-kube-api-burst",
-    "api/migration/migrations/v1.1.2/kubelet-container-log",
-    "api/migration/migrations/v1.1.2/kubelet-system-reserved",
-    "api/migration/migrations/v1.1.2/admin-container-v0-7-1",
-    "api/migration/migrations/v1.1.2/control-container-v0-5-1",
-    "api/migration/migrations/v1.1.3/kubelet-cpu-manager-state",
-    "api/migration/migrations/v1.1.3/kubelet-cpu-manager",
-    "api/migration/migrations/v1.2.0/hostname-setting",
-    "api/migration/migrations/v1.2.0/hostname-setting-metadata",
-    "api/migration/migrations/v1.2.0/add-custom-certificates",
-    "api/migration/migrations/v1.2.0/kubelet-topology-manager",
-    "api/migration/migrations/v1.2.0/container-registry-mirrors",
-    "api/migration/migrations/v1.2.0/container-registry-config-restarts",
-    "api/migration/migrations/v1.2.0/admin-container-v0-7-2",
+    # (all migrations currently archived; replace this line with new ones)
 
     "bottlerocket-release",
 
