logdog: change default output directory for tarball
This commit changes the default output directory for the tarball created
by logdog, from  `/tmp` to `/var/log/support`.

Signed-off-by: Arnaldo Garcia Rincon <agarrcia@amazon.com>

--- a/packages/release/release-tmpfiles.conf
+++ b/packages/release/release-tmpfiles.conf
@@ -3,3 +3,5 @@ C /etc/nsswitch.conf - - - -
 C /etc/wicked/ifconfig/eth0.xml - - - -
 d /var/log/kdump 0700 root root -
 T /var/log/kdump - - - - security.selinux=system_u:object_r:secret_t:s0
+d /var/log/support 0755 root root -
+T /var/log/support - - - - security.selinux=system_u:object_r:secret_t:s0
