sources: use shared constants crate in crates
This commit updates the following crates to use the shared constants
crate:

- apiclient
- bootstrap-containers
- certdog
- corndog
- early-boot-config
- ecs-settings-applier
- host-containers
- pluto
- schnauzer
- service-dog
- settings-commiter
- static-pods
- storewolf
- sundog
- thar-be-settings
- thar-be-updates

Signed-off-by: Arnaldo Garcia Rincon <agarrcia@amazon.com>

--- a/sources/api/apiclient/Cargo.toml
+++ b/sources/api/apiclient/Cargo.toml
@@ -10,6 +10,7 @@ build = "build.rs"
 exclude = ["README.md"]
 
 [dependencies]
+constants = { path = "../../constants" }
 datastore = { path = "../datastore" }
 futures = { version = "0.3", default-features = false }
 http = "0.2"
