--- a/sources/api/ecs-settings-applier/Cargo.toml
+++ b/sources/api/ecs-settings-applier/Cargo.toml
@@ -10,6 +10,7 @@ build = "build.rs"
 exclude = ["README.md"]
 
 [dependencies]
+constants = { path = "../../constants" }
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1"
 schnauzer = { path = "../schnauzer" }
