--- a/sources/api/host-containers/Cargo.toml
+++ b/sources/api/host-containers/Cargo.toml
@@ -12,6 +12,7 @@ exclude = ["README.md"]
 [dependencies]
 apiclient = { path = "../apiclient" }
 base64 = "0.13"
+constants = { path = "../../constants" }
 http = "0.2"
 log = "0.4"
 models = { path = "../../models" }
