--- a/sources/api/schnauzer/Cargo.toml
+++ b/sources/api/schnauzer/Cargo.toml
@@ -12,6 +12,7 @@ exclude = ["README.md"]
 [dependencies]
 apiclient = { path = "../apiclient" }
 base64 = "0.13"
+constants = { path = "../../constants" }
 bottlerocket-release = { path = "../../bottlerocket-release" }
 handlebars = "4.1"
 http = "0.2"
