--- a/sources/api/servicedog/Cargo.toml
+++ b/sources/api/servicedog/Cargo.toml
@@ -11,6 +11,7 @@ exclude = ["README.md"]
 
 [dependencies]
 apiclient = { path = "../apiclient" }
+constants = { path = "../../constants" }
 datastore = { path = "../datastore" }
 http = "0.2"
 log = "0.4"
