--- a/sources/api/thar-be-updates/Cargo.toml
+++ b/sources/api/thar-be-updates/Cargo.toml
@@ -11,6 +11,7 @@ exclude = ["README.md"]
 
 [dependencies]
 apiclient = { path = "../apiclient" }
+constants = { path = "../../constants" }
 bottlerocket-release = { path = "../../bottlerocket-release" }
 chrono = { version = "0.4.11", features = [ "serde" ] }
 fs2 = "0.4.3"
