migrations: Add migrations for `/etc/hosts` "service"
This change includes the 2 migrations necessary to make `/etc/hosts` an
"affected service" of `settings.network.hostname`: one to add the
service and configuration file for the hosts "service", and another to
add the hosts service to `settings.network.hostname`.

--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -24,8 +24,9 @@ members = [
     "api/migration/migration-helpers",
     "api/shibaken",
 
-    # "api/migration/migrations/vX.Y.Z/...
-    # (all migrations currently archived; replace this line with new ones)
+    # "api/migration/migrations/vX.Y.Z/..."
+    "api/migration/migrations/v1.2.1/etc-hosts-service",
+    "api/migration/migrations/v1.2.1/hostname-affects-etc-hosts",
 
     "bottlerocket-release",
 
