--- a/Release.toml
+++ b/Release.toml
@@ -68,3 +68,7 @@ version = "1.2.0"
     "migrate_v1.2.0_container-registry-config-restarts.lz4",
     "migrate_v1.2.0_admin-container-v0-7-2.lz4",
 ]
+"(1.2.0, 1.2.1)" = [
+    "migrate_v1.2.1_etc-hosts-service.lz4",
+    "migrate_v1.2.1_hostname-affects-etc-hosts.lz4",
+]
