open-vm-tools: add cilium device filters
Adds cilium devices to the exclude-nics list.

The same change was made in the kubernetes-sigs/image-builder project:
https://github.com/kubernetes-sigs/image-builder/pull/669

--- a/packages/open-vm-tools/tools.conf
+++ b/packages/open-vm-tools/tools.conf
@@ -6,4 +6,4 @@ suspend-script=/usr/bin/true
 
 [guestinfo]
 primary-nics=eth0
-exclude-nics=antrea-*,cali*,ovs-system,br*,flannel*,veth*,docker*,virbr*,vxlan_sys_*,genev_sys_*,gre_sys_*,stt_sys_*,????????-??????
+exclude-nics=antrea-*,cali*,cilium*,lxc*,ovs-system,br*,flannel*,veth*,docker*,virbr*,vxlan_sys_*,genev_sys_*,gre_sys_*,stt_sys_*,????????-??????
