--- a/sources/api/schnauzer/Cargo.toml
+++ b/sources/api/schnauzer/Cargo.toml
@@ -14,6 +14,7 @@ apiclient = { path = "../apiclient" }
 base64 = "0.13"
 constants = { path = "../../constants" }
 bottlerocket-release = { path = "../../bottlerocket-release" }
+dns-lookup = "1.0"
 handlebars = "4.1"
 http = "0.2"
 lazy_static = "1.4"
