--- a/packages/release/hosts.template
+++ b/packages/release/hosts.template
@@ -1,2 +1,3 @@
 127.0.0.1 localhost localhost.localdomain localhost4 localhost4.localdomain4
 ::1 localhost localhost.localdomain localhost6 localhost6.localdomain6
+{{add_unresolvable_hostname settings.network.hostname}}
