models, cfsignal: CloudFormation signal program
Created a new rust program, cfsignal to send signal to CloudFormation
Stack.
Program is a sort of cfn-signal
https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/cfn-signal.html
but as cfn-signal need python cannot be used by bottlerocket.

cfsignal read configuration from a cfsignal.toml file configured reading
user-data, so it depends on settings-applier.service.
It cannot send a signal for a failure happening before
settings-applier.service and network-online.target are started.

It is able to send a failure signal for any other service starting from
(included):
activate-multi-user.service

It use systemctl action is-system-running with --wait option.
This way we can know if any service, after systemd boot process
finished, is in a failure status.

Requested changes:

* removed author
* signal parameter renamed to should_signal (is more specific that
should_send)
* added README.md
* removed commented out lines
* use imdsclient in place of ec2_instance_metadata
* refactor service_check.rs and renamed to system_check.rs

use weak dependency (WantedBy)for cfsignal.service

use tokio LTS, only with needed features

restart command

some code refactor

* use directly signal_resource as function
* code simplification in system_check.rs
* use standard boilerplate for main function

semaphore file and migration

* Use semaphore file to only run on first boot
* Add migration file for downgrading
* client.signal_resource collapsed
* Fix to packages/os/os.spec: toml file is not copyed (introduced during
  rebase)

Readme changes

--- a/Release.toml
+++ b/Release.toml
@@ -101,3 +101,6 @@ version = "1.6.1"
     "migrate_v1.6.0_public-control-container-v0-5-5.lz4",
 ]
 "(1.6.0, 1.6.1)" = []
+"(1.6.1, 1.6.2)" = [
+    "migrate_v1.6.2_add-cfsignal.lz4",
+]
