--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -40,6 +40,7 @@ members = [
     "api/migration/migrations/v1.6.0/aws-control-container-v0-5-5",
     "api/migration/migrations/v1.6.0/public-admin-container-v0-7-4",
     "api/migration/migrations/v1.6.0/public-control-container-v0-5-5",
+    "api/migration/migrations/v1.6.2/add-cfsignal",
 
     "bottlerocket-release",
 
@@ -54,6 +55,8 @@ members = [
     "prairiedog",
 
     "metricdog",
+
+    "cfsignal",
 
     "logdog",
 
