--- a/Release.toml
+++ b/Release.toml
@@ -71,4 +71,5 @@ version = "1.2.0"
 "(1.2.0, 1.3.0)" = [
     "migrate_v1.3.0_etc-hosts-service.lz4",
     "migrate_v1.3.0_hostname-affects-etc-hosts.lz4",
+    "migrate_v1.3.0_control-container-v0-5-2.lz4",
 ]
